# notesy

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
app/: log.py  main.py
app/routers/: auth.py  debug.py  graphql_router.py  notes_api.py  pages.py  summarize.py
app/static/: app.js  styles.css
app/templates/: base.html  dashboard.html  index.html  login.html
tests/: test_config.py
